Project boutique {
  database_type: 'MySQL'
  Note: 'Une bdd simple de boutique en ligne pour le TP qui sera importée dans MySQL'
}

Table Client {
  id int [pk, increment, note: 'Identifiant unique du client']
  nom varchar [unique, not null, note: 'Nom du client']
  adresse text [null, note: 'Adresse du client']
}

Table Commande {
  id int [pk, increment, note: 'Identifiant unique de la commande']
  date date [default: `now()`, note: 'Date de la commande au format YYYY-MM-DD HH:MM:SS']
  client_id int [ref: > Client.id, note: 'Identifiant du client']
}

Table CommandeDetail {
  commande_id int [pk, ref: > Commande.id, note: 'Identifiant de la commande']
  produit_id int [pk, ref: > Produit.id, note: 'Identifiant du produit']
  quantite int [default: 1, note: 'Quantité de produit']
}

Table Produit {
  id int [pk, increment, note: 'Identifiant unique du produit']
  label varchar [unique, not null, note: 'Nom du produit']
  description text [not null, note: 'Description du produit']
  prix decimal [default: 1.0, note: 'Prix unitaire du produit, en euros, avec 2 chiffres après la virgule, ex: 12.34, doit être >= 0']
}